Closed Bug 1798652 Opened 2 years ago Closed 2 years ago

WinCompositorWindowThread::ShutDown should explicitly stop

Categories

(Core :: Graphics, defect, P3)

defect

Tracking

()

RESOLVED FIXED
108 Branch
Tracking Status
firefox108 --- fixed

People

(Reporter: jstutte, Assigned: bradwerth)

References

Details

Attachments

(1 file)

It seems WinCompositorWindowThread::ShutDown misses an explicit thread->Stop().

See Also: → 1798630

I can solve this once Bug 1798651 lands.

Assignee: nobody → bwerth
Severity: -- → S3
Depends on: 1798651
Priority: -- → P3

This change also ensures that our thread is stopped, as long as shutdown
was successful.

Pushed by bwerth@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/9a1762f9ff3f Make WinCompositorWindowThread::ShutDown timeout after 2 seconds. r=sotaro
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 108 Branch
Regressions: 1809542
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: