Bug 1798652: Make WinCompositorWindowThread::ShutDown timeout after 2 seconds. r=sotaro

This change also ensures that our thread is stopped, as long as shutdown
was successful.

Differential Revision: https://phabricator.services.mozilla.com/D161644