widget/windows/WinCompositorWindowThread.cpp
@@ -55,12 +55,21 @@ void WinCompositorWindowThread::ShutDown() {
   MOZ_ASSERT(NS_IsMainThread());
   MOZ_ASSERT(sWinCompositorWindowThread);
 
+  // Our shutdown task could hang. Since we're shutting down,
+  // that's not a critical problem. We set a reasonable amount
+  // of time to wait for shutdown, and if it succeeds within
+  // that time, we correctly stop our thread. If it times out,
+  // we just leak the memory and proceed.
+  static const PRIntervalTime TIMEOUT = PR_TicksPerSecond() * 2;
   layers::SynchronousTask task("WinCompositorWindowThread");
   RefPtr<Runnable> runnable = WrapRunnable(
       RefPtr<WinCompositorWindowThread>(sWinCompositorWindowThread.get()),
       &WinCompositorWindowThread::ShutDownTask, &task);
   sWinCompositorWindowThread->Loop()->PostTask(runnable.forget());
-  task.Wait();
+  nsresult rv = task.Wait(TIMEOUT);
+  if (rv == NS_OK) {
+    sWinCompositorWindowThread->mThread->Stop();
+  }
 
   sWinCompositorWindowThread = nullptr;
 }
